--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html> 
 <html>
     <head>
-        <title><Born-To-Explore></Born-To-Explore></title>
+        <title>Born-To-Explore</title>
     </head>
+
     <body>
-        Welcome!
+        <header>
+            <h1>Born-To-Explore</h1>
+            <h2>Missions:</h2>
+            <nav> 
+                <!--Add links to diff github pages w diff missions-->>
+            </nav>
+        </header>
+        <main>
+            <div class="row">
+                <div class="image-link">
+                    <h1>Newest Post</h1>
+                    <section>
+                        <!--Add code that updates this to the newest post-->
+                    </section>
+                </div>
+                <div class="about-me">
+                    <h2>About Me</h2>
+                    <img src = "null">
+                    <p>Info</p>
+                    <ul>
+                        <li>Cool fun facts</li>
+                        <li>Cool fun facts</li>
+                        <li>Cool fun facts</li>
+                    </ul>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <a href="google.com">Social Media</a>
+        </footer>
     </body>
 </html>
