Added: Robots.txt, style.css Edited: index.html - Created Html skeleton

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html> 
 <html>
     <head>
+        <meta name="robots" content="noindex">
+        <link rel="stylesheet" href="style.css">
         <title>Born-To-Explore</title>
     </head>
 
