--- a/index.html
+++ b/index.html
@@ -7,35 +7,53 @@
     </head>
 
     <body>
+
         <header>
             <h1>Born-To-Explore</h1>
-            <h2>Missions:</h2>
             <nav> 
-                <!--Add links to diff github pages w diff missions-->>
+                 <!--Add links to diff github pages or info-->
+                link 
+                link
             </nav>
         </header>
+
         <main>
+
             <div class="row">
-                <div class="image-link">
+
+                <div class="newest_post">
                     <h1>Newest Post</h1>
                     <section>
                         <!--Add code that updates this to the newest post-->
                     </section>
                 </div>
-                <div class="about-me">
-                    <h2>About Me</h2>
-                    <img src = "null">
-                    <p>Info</p>
-                    <ul>
-                        <li>Cool fun facts</li>
-                        <li>Cool fun facts</li>
-                        <li>Cool fun facts</li>
+
+                <div class="about_me">
+                    <div class = "title">
+                        <div class="rightMurphy">
+                            <img src = "img/murphy.png">
+                        </div>
+                        <div class="leftMurphy">
+                            <img src = "img/murphyflipped.png">
+                        </div>
+                        
+                        <h1>About Me</h1>
+                    </div>
+                    <div class = "body">
+                        <img src = "img/murphy.png">
+                        <p>Info</p>
+                        <ul>
+                            <li>Cool fun facts</li>
+                            <li>Cool fun facts</li>
+                            <li>Cool fun facts</li>
                     </ul>
+                    </div>
                 </div>
+
             </div>
         </main>
         <footer>
-            <a href="google.com">Social Media</a>
+            <a href="google.com/google.com">Social Media</a>
         </footer>
     </body>
 </html>
