Include wrong version of index & CSS - FIXED

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
             <h1>Born-To-Explore</h1>
             <nav> 
                  <!--Add links to diff github pages or info-->
-                link 
-                link
+                 |
+                 <a href="null">Gallery</a>
+                 |
+                 <a href="null">Missions</a>
+                 |
+                 <a href="null">LINK3</a>
+                 |
             </nav>
         </header>
 
@@ -53,7 +58,15 @@
             </div>
         </main>
         <footer>
-            <a href="google.com/google.com">Social Media</a>
+            |
+            <a href="google.com/google.com">LinkName</a>
+            |
+            <a href="google.com/google.com">LinkName</a>
+            |
+            <a href="google.com/google.com">LinkName</a>
+            |
+            <a href="google.com/google.com">LinkName</a>
+            |
         </footer>
     </body>
 </html>
