Filled out README.md Index.html formatted for Automatic Newest Post style.css colors & proportions changed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <title>Born-To-Explore</title>
     </head>
-
     <body>
-
         <header>
             <h1>Born-To-Explore</h1>
             <nav> 
@@ -21,18 +19,16 @@
                  |
             </nav>
         </header>
-
         <main>
-
             <div class="row">
-
                 <div class="newest_post">
                     <h1>Newest Post</h1>
-                    <section>
-                        <!--Add code that updates this to the newest post-->
-                    </section>
+                    <div class="link_image">
+                        <section>
+                            <!--Add code that updates this to the newest post-->
+                        </section>
+                    </div>
                 </div>
-
                 <div class="about_me">
                     <div class = "title">
                         <div class="rightMurphy">
@@ -40,8 +36,7 @@
                         </div>
                         <div class="leftMurphy">
                             <img src = "img/murphyflipped.png">
-                        </div>
-                        
+                        </div>                       
                         <h1>About Me</h1>
                     </div>
                     <div class = "body">
@@ -51,10 +46,9 @@
                             <li>Cool fun facts</li>
                             <li>Cool fun facts</li>
                             <li>Cool fun facts</li>
-                    </ul>
+                        </ul>
                     </div>
                 </div>
-
             </div>
         </main>
         <footer>
