Added Social Media icons modified index and css to support images as links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                  |
                  <a href="null">Missions</a>
                  |
-                 <a href="null">LINK3</a>
+                 <a href="null">Blog</a>
                  |
             </nav>
         </header>
@@ -52,15 +52,10 @@
             </div>
         </main>
         <footer>
-            |
-            <a href="google.com/google.com">LinkName</a>
-            |
-            <a href="google.com/google.com">LinkName</a>
-            |
-            <a href="google.com/google.com">LinkName</a>
-            |
-            <a href="google.com/google.com">LinkName</a>
-            |
+            <a href="https://reddit.com"><img src="img/reddit.svg" alt = "Reddit" style = "width:40px;height:40px;"></a>
+            <a href="https://youtube.com"><img src="img/youtube.svg" alt = "Youtube" style = "width:40px;height:40px;"></a>
+            <a href="https://twitter.com"><img src="img/twitter.svg" alt = "Twitter" style = "width:40px;height:40px;"></a>
+            <a href="https://instagram.com"><img src="img/instagram.svg" alt = "Instagram" style = "width:40px;height:40px;"></a>
         </footer>
     </body>
 </html>
