--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
             <nav> 
                  <!--Add links to diff github pages or info-->
                  |
-                 <a href="null">Gallery</a>
+                 <a href="born-to-explore.github.io/gallery/index.html">Gallery</a>
                  |
                  <a href="null">Missions</a>
                  |
