Fixed format for first page

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,4 +1,4 @@
-c<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta name="robots" content="noindex">
@@ -6,6 +6,6 @@ c<!DOCTYPE html>
         <title>GALLERY -- Born-To-Explore</title>
     </head>
     <body>
-        
+
     </body>
 </html>
