Added links for other pages Added basic nav menu to gallery

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -6,6 +6,18 @@
         <title>GALLERY -- Born-To-Explore</title>
     </head>
     <body>
-
+        <header>
+            <h1>Born-To-Explore</h1>
+            <nav> 
+                 <!--Add links to diff github pages or info-->
+                 |
+                 <a href="https://born-to-explore.github.io">Home</a>
+                 |
+                 <a href="https://born-to-explore.github.io/missions/index.html">Missions</a>
+                 |
+                 <a href="https://born-to-explore.github.io/blog/index.html">Blog</a>
+                 |
+            </nav>
+        </header>
     </body>
 </html>
