--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                  |
                  <a href="https://born-to-explore.github.io/gallery/index.html">Gallery</a>
                  |
-                 <a href="null">Missions</a>
+                 <a href="https://born-to-explore.github.io/missions/index.html">Missions</a>
                  |
-                 <a href="null">Blog</a>
+                 <a href="https://born-to-explore.github.io/blog/index.html">Blog</a>
                  |
             </nav>
         </header>
