--- a/gallery/index.html
+++ b/gallery/index.html
@@ -19,5 +19,14 @@
                  |
             </nav>
         </header>
+        <main>
+
+        </main>
+        <footer>
+            <a href="https://reddit.com" rel="noopener noreferrer" target="_blank"><img src="img/reddit.svg" alt = "Reddit" style = "width:40px;height:40px;"></a>
+            <a href="https://youtube.com" rel="noopener noreferrer" target="_blank"><img src="img/youtube.svg" alt = "Youtube" style = "width:40px;height:40px;"></a>
+            <a href="https://twitter.com" rel="noopener noreferrer" target="_blank"><img src="img/twitter.svg" alt = "Twitter" style = "width:40px;height:40px;"></a>
+            <a href="https://instagram.com" rel="noopener noreferrer" target="_blank"><img src="img/instagram.svg" alt = "Instagram" style = "width:40px;height:40px;"></a>
+        </footer>
     </body>
 </html>
