Added index.html for all sub pages Standardized nav menu Connected all pages Cleaned up code/comments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <header>
             <h1>Born-To-Explore</h1>
             <nav> 
-                 <!--Add links to diff github pages or info-->
+                 |
+                <a href="https://born-to-explore.github.io">Home</a>
                  |
                  <a href="https://born-to-explore.github.io/gallery/index.html">Gallery</a>
                  |
