--- a/missions/index.html
+++ b/missions/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="robots" content="noindex">
         <link rel="stylesheet" href="style.css">
-        <title>GALLERY -- Born-To-Explore</title>
+        <title>Missions -- Born-To-Explore</title>
     </head>
     <body>
         <header>
