--- a/gallery/index.html
+++ b/gallery/index.html
@@ -7,17 +7,17 @@
     </head>
     <body>
         <header>
-            <h1>Born-To-Explore</h1>
+            <h1>Photo Gallery</h1>
             <nav> 
-                 |
+                |
                 <a href="https://born-to-explore.github.io">Home</a>
-                 |
-                 <a href="https://born-to-explore.github.io/gallery/index.html">Gallery</a>
-                 |
-                 <a href="https://born-to-explore.github.io/missions/index.html">Missions</a>
-                 |
-                 <a href="https://born-to-explore.github.io/blog/index.html">Blog</a>
-                 |
+                |
+                <a href="https://born-to-explore.github.io/gallery/index.html">Gallery</a>
+                |
+                <a href="https://born-to-explore.github.io/missions/index.html">Missions</a>
+                |
+                <a href="https://born-to-explore.github.io/blog/index.html">Blog</a>
+                |
             </nav>
         </header>
         <main>
