--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="robots" content="noindex">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="imgage/x-icon" href="img/murphy.png">
         <title>Born-To-Explore</title>
     </head>
     <body>
